# kvart

./: .gitignore  CLAUDE.md  Cargo.toml  PRIVACY_POLICY.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
apple/: Justfile  Kvart.storekit  project.yml
apple/Kvart/: BellAnimation.swift  Info-iOS.plist  KvartApp.swift  LocaleBundle.swift  Localization.swift  SettingsView.swift  ThemesView.swift  TimerFace.swift  TimerFaceBlaze.swift  TimerFaceVintageAmber.swift  TimerScreen.swift  core.swift
apple/Kvart/Assets.xcassets/LaunchBackground.colorset/: Contents.json
apple/KvartWidget/: Info-Widget.plist  KvartWidgetBundle.swift  TimerLiveActivity.swift
apple/Shared/: SevenSegmentDisplay.swift  ThemePalette.swift  TimerActivityAttributes.swift  TimerIntents.swift
i18n/: de.toml  en.toml  fr.toml  sv.toml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
lib/: main.dart  timer.dart
lib/background/: background_service.dart
lib/notification/: notification_service.dart
lib/purchase/: purchase_service.dart
lib/settings/: settings_screen.dart  settings_service.dart
lib/themes/: default.dart  theme_service.dart  themes_screen.dart  vintage_amber.dart
lib/themes/blaze/: blaze.dart  preview.dart
lib/themes/default/: default.dart  preview.dart
lib/themes/vintage_amber/: preview.dart  vintage_amber.dart
lib/timer/: timer_controller.dart  timer_screen.dart  timer_view.dart
lib/widgets/: bell_animation.dart  seven_segment_display.dart
shared/: Cargo.toml  uniffi.toml
shared/src/: app.rs  ffi.rs  lib.rs
shared/src/background/: mod.rs
shared/src/notification/: mod.rs
shared/src/persistence/: mod.rs
shared/src/settings/: mod.rs
shared/src/themes/: mod.rs
shared/src/timer/: mod.rs
test/: widget_test.dart
(+2 files in other folders)
