[package]
name = "shared"
version = "2.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

# ANCHOR: typegen_bin
[[bin]]
name = "codegen"
required-features = ["codegen"]
# ANCHOR_END: typegen_bin

[[bin]]
name = "i18n"
required-features = ["i18n"]

# ANCHOR: typegen
[features]
facet_typegen = ["crux_core/facet_typegen"]
# ANCHOR_END: typegen
uniffi = ["dep:uniffi"]
wasm_bindgen = ["dep:wasm-bindgen"]
codegen = [
    "crux_core/cli",
    "dep:clap",
    "dep:log",
    "dep:pretty_env_logger",
    "uniffi",
]
i18n = ["dep:clap", "dep:toml", "dep:serde_json", "dep:anyhow"]

# ANCHOR: typegen_deps
[dependencies]
facet = "=0.31"
# ANCHOR_END: typegen_deps
crux_core.workspace = true
serde = { workspace = true, features = ["derive"] }

# optional dependencies
clap = { version = "4.6.0", optional = true, features = ["derive"] }
log = { version = "0.4.29", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
uniffi = { version = "=0.29.4", optional = true }
wasm-bindgen = { version = "0.2.114", optional = true }
toml = { version = "0.8", optional = true }
serde_json = { version = "1", optional = true }
anyhow = { version = "1", optional = true }
